[package]
name = "hyperdir"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.25"
tokio = { version = "1", features = ["full"] }
libc = "0.2.170"
bytes = "1.10.1"
ulid = "1.2.1"
base64 = "0.22.1"
crc64fast = "1.1.0"
aws-sdk-s3 = "1.85.0"
btree-ondisk = { version = "0.16.0", default-features = false }
hyperfile = { version = "0.2.0", default-features = false }

[features]
default = ["hyperfile/blocking", "hyperfile/meta_loader_batch"]
wal = ["hyperfile/wal"]
