[package]
name = "hyperdir"
version = "0.3.0"
edition = "2021"
description = "A container for inodes implemented as a Hyperfile"
authors = ["Dai Yiyang"]
license = "Apache-2.0"
categories = ["asynchronous", "filesystem", "data-structures"]
keywords = ["file", "object-storage", "s3"]
homepage = "https://github.com/hyperfile/hyperdir"
repository = "https://github.com/hyperfile/hyperdir"

[dependencies]
log = "0.4.25"
tokio = { version = "1", features = ["sync", "time"] }
libc = "0.2.170"
bytes = "1.10.1"
ulid = "1.2.1"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22.1"
crc64fast = "1.1.0"
aws-sdk-s3 = "1.85.0"
btree-ondisk = { version = "0.18.1", default-features = false }
hyperfile = { version = "0.3.1", default-features = false }

[features]
default = ["hyperfile/blocking", "hyperfile/meta_loader_batch"]
wal = ["hyperfile/wal"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
